Rewriting $nor with a $text predicate to $not is invalid

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.0, v4.4, v4.2, v4.0
    • Query Execution 2021-05-31
    • 170
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When $nor expression has a single child node which contains a $text predicate, rewriting it to $not is invalid, since we forbid such constructs at the grammar level (since $text can only be applied to top-level documents). Applying this rewrite rule to such query could lead to incorrect plan selection.

            Assignee:
            Anton Korshunov
            Reporter:
            Anton Korshunov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: