SERVER-57053 Split CanonicalQuery validation on pre- and post-normalization