src/mongo/db/query/canonical_query.cpp
@@ -198,13 +198,17 @@ Status CanonicalQuery::init(OperationContext* opCtx,
     _canHaveNoopMatchNodes = canHaveNoopMatchNodes;
     _forceClassicEngine = internalQueryForceClassicEngine.load();
 
-    // Normalize and validate tree.
-    _root = MatchExpression::normalize(std::move(root));
-    auto validStatus = isValid(_root.get(), *_findCommand);
+    auto validStatus = isValid(root.get(), *_findCommand);
     if (!validStatus.isOK()) {
         return validStatus.getStatus();
     }
     auto unavailableMetadata = validStatus.getValue();
+    _root = MatchExpression::normalize(std::move(root));
+    // The tree must always be valid after normalization.
+    dassert(isValid(_root.get(), *_findCommand).isOK());
+    if (auto status = isValidNormalized(_root.get()); !status.isOK()) {
+        return status;
+    }
 
     // Validate the projection if there is one.
     if (!_findCommand->getProjection().isEmpty()) {
@@ -328,7 +332,7 @@ size_t CanonicalQuery::countNodes(const MatchExpression* root, MatchExpression::
 /**
  * Does 'root' have a subtree of type 'subtreeType' with a node of type 'childType' inside?
  */
-bool hasNodeInSubtree(MatchExpression* root,
+bool hasNodeInSubtree(const MatchExpression* root,
                       MatchExpression::MatchType childType,
                       MatchExpression::MatchType subtreeType) {
     if (subtreeType == root->matchType()) {
@@ -342,7 +346,7 @@ bool hasNodeInSubtree(MatchExpression* root,
     return false;
 }
 
-StatusWith<QueryMetadataBitSet> CanonicalQuery::isValid(MatchExpression* root,
+StatusWith<QueryMetadataBitSet> CanonicalQuery::isValid(const MatchExpression* root,
                                                         const FindCommandRequest& findCommand) {
     QueryMetadataBitSet unavailableMetadata{};
 
@@ -368,20 +372,7 @@ StatusWith<QueryMetadataBitSet> CanonicalQuery::isValid(MatchExpression* root,
     if (numGeoNear > 1) {
         return Status(ErrorCodes::BadValue, "Too many geoNear expressions");
     } else if (1 == numGeoNear) {
-        bool topLevel = false;
-        if (MatchExpression::GEO_NEAR == root->matchType()) {
-            topLevel = true;
-        } else if (MatchExpression::AND == root->matchType()) {
-            for (size_t i = 0; i < root->numChildren(); ++i) {
-                if (MatchExpression::GEO_NEAR == root->getChild(i)->matchType()) {
-                    topLevel = true;
-                    break;
-                }
-            }
-        }
-        if (!topLevel) {
-            return Status(ErrorCodes::BadValue, "geoNear must be top-level expr");
-        }
+        // Do nothing, we will perform extra checks in CanonicalQuery::isValidNormalized.
     } else {
         // Geo distance and geo point metadata are unavailable.
         unavailableMetadata |= DepsTracker::kAllGeoNearData;
@@ -455,6 +446,30 @@ StatusWith<QueryMetadataBitSet> CanonicalQuery::isValid(MatchExpression* root,
     }
 
     return unavailableMetadata;
+}
+
+Status CanonicalQuery::isValidNormalized(const MatchExpression* root) {
+    if (auto numGeoNear = countNodes(root, MatchExpression::GEO_NEAR); numGeoNear > 0) {
+        tassert(5705300, "Only one $getNear expression is expected", numGeoNear == 1);
+
+        auto topLevel = false;
+        if (MatchExpression::GEO_NEAR == root->matchType()) {
+            topLevel = true;
+        } else if (MatchExpression::AND == root->matchType()) {
+            for (size_t i = 0; i < root->numChildren(); ++i) {
+                if (MatchExpression::GEO_NEAR == root->getChild(i)->matchType()) {
+                    topLevel = true;
+                    break;
+                }
+            }
+        }
+
+        if (!topLevel) {
+            return Status(ErrorCodes::BadValue, "geoNear must be top-level expr");
+        }
+    }
+
+    return Status::OK();
 }
 
 int CanonicalQuery::getOptions() const {
