jstests/core/fts_querylang.js
@@ -2,6 +2,7 @@
 // @tags: [
 //   requires_multi_updates,
 //   requires_non_retryable_writes,
+//   requires_fcv_50,
 // ]
 (function() {
 "use strict";
@@ -87,8 +88,19 @@ assert.eq(2, coll.find({b: 1}).itcount(), 'incorrect number of documents updated
 
 // $text cannot be contained within a $nor.
 assert.commandFailedWithCode(
-    assert.throws(function() {
-                     coll.find({$nor: [{$text: {$search: 'a'}}]}).itcount();
-                 }),
-                 ErrorCodes.NoQueryExecutionPlans);
+    assert.throws(() => coll.find({$nor: [{$text: {$search: 'a'}}]}).itcount()),
+                 ErrorCodes.BadValue);
+assert.commandFailedWithCode(
+    assert.throws(() => coll.find({$nor: [{a: 1}, {$text: {$search: 'a'}}]}).itcount()),
+                 ErrorCodes.BadValue);
+assert.commandFailedWithCode(
+    assert.throws(() =>
+                      coll.find({
+                              $and: [
+                                  {a: 2},
+                                  {$nor: [{$or: [{c: {$not: {$ne: 10}}}, {$text: {$search: 'a'}}]}]}
+                              ]
+                          })
+                          .itcount()),
+                 ErrorCodes.BadValue);
 }());
